--- a/src/data/blog/posts/川西六记.md
+++ b/src/data/blog/posts/川西六记.md
@@ -9,17 +9,17 @@ date: 2020-10-31 22:11:21
 
 ### 1. 公路之歌
 
-​        毫不夸张的说，这次旅途一大半的时间都花在了公路上。第一天从成都出发，一直到新都桥，再到一个已经忘掉名字但是住了一晚的村庄，就开了九个小时。第四天更甚，从稻城开往色达，从白天到黑夜，花了整整十二个小时。
+毫不夸张的说，这次旅途一大半的时间都花在了公路上。第一天从成都出发，一直到新都桥，再到一个已经忘掉名字但是住了一晚的村庄，就开了九个小时。第四天更甚，从稻城开往色达，从白天到黑夜，花了整整十二个小时。
 
-​        对于公路，我一直有一种好感。很久以来，我的脑海中都有开着越野车跋山涉水、在戈壁公路上驰骋扬起灰尘的画面。因此在刚出成都，走的还是高速公路的时候，我感到了一丝失望。因为想象中的前往川西和西藏的路不应该这么平坦，也不应该有这么多车。六个小时后，天完全变黑，车驶出高速开上盘山的、颠簸的318国道，路上没有那么多车了。我坐在副驾驶，右手紧紧地攥着车门上的把手，尽管感受到了困意却不敢闭上眼睛，紧张到头顶和脚底都冒出了冷汗。
+对于公路，我一直有一种好感。很久以来，我的脑海中都有开着越野车跋山涉水、在戈壁公路上驰骋扬起灰尘的画面。因此在刚出成都，走的还是高速公路的时候，我感到了一丝失望。因为想象中的前往川西和西藏的路不应该这么平坦，也不应该有这么多车。六个小时后，天完全变黑，车驶出高速开上盘山的、颠簸的318国道，路上没有那么多车了。我坐在副驾驶，右手紧紧地攥着车门上的把手，尽管感受到了困意却不敢闭上眼睛，紧张到头顶和脚底都冒出了冷汗。
 
-​        夜晚的公路和白天的公路，是完全不一样的公路。美好的公路回忆都停留在白天。我记得227国道下湍急的河流和弯道处迎面而来的山，也记得548国道边的藏民九年一贯制学校，也记得翻过山看到好像沉落在道路尽头的太阳。可是到了晚上，看到的只有车灯能照到的第一个弯道。对向时不时驶来开着远光灯的小汽车，把仅有的视线都晃没了。刚到色达的晚上，我们驶出城镇驶向山区又驶回城镇。我以为是一条田野间的土路，第二天白天从相同的起点朝相同的方向进发，才发现原来路的右边是陡峭山坡，山坡的下面是迅疾的水流。如果白天的公路是能唱着“一直往南方开一直往南方开”的理想和追求，夜晚的公路就是“蓝蓝的天空银河里有只小白船”般的平静和诡异。
+夜晚的公路和白天的公路，是完全不一样的公路。美好的公路回忆都停留在白天。我记得227国道下湍急的河流和弯道处迎面而来的山，也记得548国道边的藏民九年一贯制学校，也记得翻过山看到好像沉落在道路尽头的太阳。可是到了晚上，看到的只有车灯能照到的第一个弯道。对向时不时驶来开着远光灯的小汽车，把仅有的视线都晃没了。刚到色达的晚上，我们驶出城镇驶向山区又驶回城镇。我以为是一条田野间的土路，第二天白天从相同的起点朝相同的方向进发，才发现原来路的右边是陡峭山坡，山坡的下面是迅疾的水流。如果白天的公路是能唱着“一直往南方开一直往南方开”的理想和追求，夜晚的公路就是“蓝蓝的天空银河里有只小白船”般的平静和诡异。
 
-​        倒数第二天，也就是来到川西的第七天，我们驱车从色达前往毕棚沟。六点左右，天色渐暗，我们开在路况十分不好的省道上，我的心脏都快蹦出来了。由于附近有修桥的工程，本就狭窄危险的道路上还要通行尺寸巨大的卡车，会车时我最大的担心就是被这些庞然大物挤落山崖。七点左右，天黑，我们途径马尔康，走上了蓉昌高速。通过收费站的一刹那，我如释重负，想起了出成都时对高速公路嗤之以鼻的年轻的我，不由得感叹大自然改造一个热血青年的速度。有高速走，是多么幸福的一件事啊！悬着的心终于放下，我心安理得地闭上了疲倦的双眼。
+倒数第二天，也就是来到川西的第七天，我们驱车从色达前往毕棚沟。六点左右，天色渐暗，我们开在路况十分不好的省道上，我的心脏都快蹦出来了。由于附近有修桥的工程，本就狭窄危险的道路上还要通行尺寸巨大的卡车，会车时我最大的担心就是被这些庞然大物挤落山崖。七点左右，天黑，我们途径马尔康，走上了蓉昌高速。通过收费站的一刹那，我如释重负，想起了出成都时对高速公路嗤之以鼻的年轻的我，不由得感叹大自然改造一个热血青年的速度。有高速走，是多么幸福的一件事啊！悬着的心终于放下，我心安理得地闭上了疲倦的双眼。
 
 ### 2. 光
 
-​        稻城到色达大约有700公里，我们计划花一整天开过去。
+稻城到色达大约有700公里，我们计划花一整天开过去。
 
 ### 3. 无人机之死
 
@@ -27,15 +27,13 @@ date: 2020-10-31 22:11:21
 
 ### 4. 野狼
 
-​        “山上有野狼。”
-
-​        抵达色达时已经是晚上十点，找了家饭店吃了一顿晚餐后，就接近十一点了。色达最著名的游览景点一个是山谷中的色达佛学院，另一个是
+抵达色达时已经是晚上十点，找了家饭店吃了一顿晚餐后，就接近十一点了。色达最著名的游览景点一个是山谷中的色达佛学院，另一个是
 
 ### 5. 蝴蝶效应
 
 ### 6. 稻草人与乌鸦
 
-​      乌鸦和稻草人认识不久，但是结下了深厚的友谊。稻草人立在一条弯曲的山路的一边，乌鸦天天停在稻草人的肩膀上。然而有一天，不知道怎么回事，稻草人倒在了地上。路过的鸟群既惊讶又担心，上前一探究竟，但是只能看到躺着的稻草人，看不到那只乌鸦。
+乌鸦和稻草人认识不久，但是结下了深厚的友谊。稻草人立在一条弯曲的山路的一边，乌鸦天天停在稻草人的肩膀上。然而有一天，不知道怎么回事，稻草人倒在了地上。路过的鸟群既惊讶又担心，上前一探究竟，但是只能看到躺着的稻草人，看不到那只乌鸦。
 
 
 
